added repository mongo, and tested integration